// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposal Modal onVote enables voting if the proposal is on the 'VotingPeriod' 1`] = `
<tmpage-stub hideheader="true" title="" subtitle="" data-title="Proposal" class="small">
  <div class="proposal">
    <div class="page-profile__header__info"><span class="proposal-status pink">
          Voting Period
        </span>
      <h2 class="proposal-title"></h2>
    </div>
    <div class="button-container">
      <tmbtn-stub value="Deposit" disabled="true" id="deposit-btn" color="primary"></tmbtn-stub>
      <tmbtn-stub value="Vote" id="vote-btn" color="primary"></tmbtn-stub>
    </div>
  </div>
  <textblock-stub content=""></textblock-stub>
  <!---->
  <ul class="row">
    <li>
      <h4>Total Vote Count</h4> <span>
          0.00% /
          0
        </span>
    </li>
    <li>
      <h4>Yes</h4> <span>
          NaN%
          /
          0
        </span>
    </li>
    <li>
      <h4>No</h4> <span>
          NaN%
          /
          0
        </span>
    </li>
    <li>
      <h4>Veto</h4> <span>
          NaN%
          /
          0
        </span>
    </li>
    <li>
      <h4>Abstain</h4> <span>
          NaN%
          /
          0
        </span>
    </li>
  </ul>
  <ul class="row">
    <li>
      <h4>Proposal ID</h4> <span></span>
    </li>
    <li>
      <h4>Submitted</h4> <span>January 1st 1970, 00:00</span>
    </li>
    <li>
      <h4>Voting Period Start Date</h4> <span>January 1st 1970, 00:00</span>
    </li>
    <li>
      <h4>Voting Period End Date</h4> <span>
            January 1st 1970, 00:00 /
            a few seconds ago
          </span>
    </li>
  </ul>
  <modaldeposit-stub proposalid="2" proposaltitle="" denom="TESTCOIN"></modaldeposit-stub>
  <modalvote-stub proposalid="2" proposaltitle=""></modalvote-stub>
</tmpage-stub>
`;

exports[`PageProposal Modal onVote shows the last valid vote 1`] = `
<tmpage-stub hideheader="true" title="" subtitle="" data-title="Proposal" class="small">
  <div class="proposal">
    <div class="page-profile__header__info"><span class="proposal-status grey">
          Error
        </span>
      <h2 class="proposal-title"></h2>
    </div>
    <div class="button-container">
      <tmbtn-stub value="Deposit" disabled="true" id="deposit-btn" color="primary"></tmbtn-stub>
      <tmbtn-stub value="Vote" disabled="true" id="vote-btn" color="primary"></tmbtn-stub>
    </div>
  </div>
  <textblock-stub content=""></textblock-stub>
  <!---->
  <ul class="row">
    <!---->
    <li>
      <h4>Yes</h4> <span>
          NaN%
          /
          0
        </span>
    </li>
    <li>
      <h4>No</h4> <span>
          NaN%
          /
          0
        </span>
    </li>
    <li>
      <h4>Veto</h4> <span>
          NaN%
          /
          0
        </span>
    </li>
    <li>
      <h4>Abstain</h4> <span>
          NaN%
          /
          0
        </span>
    </li>
  </ul>
  <ul class="row">
    <li>
      <h4>Proposal ID</h4> <span></span>
    </li>
    <li>
      <h4>Submitted</h4> <span>January 1st 1970, 00:00</span>
    </li>
    <li>
      <h4>Proposal Finalized (Error)</h4> <span>January 1st 1970, 00:00</span>
    </li>
  </ul>
  <modaldeposit-stub proposalid="2" proposaltitle="" denom="TESTCOIN"></modaldeposit-stub>
  <modalvote-stub proposalid="2" proposaltitle="" lastvoteoption="Yes"></modalvote-stub>
</tmpage-stub>
`;

exports[`PageProposal should display proposal page should show a loader if the necessary data hasen't been loaded 1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <tmdataloading-stub
    title="Data is loading…"
  />
</tmpage-stub>
`;

exports[`PageProposal shows an error if the proposal couldn't be found 1`] = `
<tmpage-stub
  class="small"
  data-title="Proposal"
  hideheader="true"
  subtitle=""
  title=""
>
  <tmdataerror-stub />
</tmpage-stub>
`;
